agc-egresslockdown/testapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: webapp
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      run: webapp
  template:
    metadata:
      labels:
        run: webapp
    spec:
      containers:
      - image: mcr.microsoft.com/dotnet/samples:aspnetapp
        name: webapp
        ports:
        - containerPort: 8080
