agc-egresslockdown/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-route
spec:
  parentRefs:
  - name: gateway-01
  rules:
  - backendRefs:
    - name: webapp-svc
      port: 80
